Improve manual installation

--- a/modules/ROOT/pages/deployment/manual/manual-setup.adoc
+++ b/modules/ROOT/pages/deployment/manual/manual-setup.adoc
@@ -71,11 +71,19 @@ or
 ocis help
 ----
 
+== Accessing the oCIS Runtime
+
+When you have configured and started the oCIS _runtime_ either xref:starting-ocis[manually] or via xref:setting-up-systemd-for-ocis[systemd] as described below, you can access it via a browser using `localhost:9200` or whatever URL and port you have defined.
+
 == Start and Stop oCIS
 
 === Starting oCIS
 
-When oCIS has been installed, you can start the oCIS runtime which includes the available extension as follows:
+Post installing oCIS, you can start the oCIS runtime which includes available extension as follows. See the sections xref:deployment/general/general-info.adoc#starting-ocis-with-environment-variables[Starting oCIS With Environment Variables] and xref:deployment/general/general-info.adoc#configurations-to-access-the-webui[Configurations to Access the WebUI] or xref:deployment/general/general-info.adoc#define-the-ocis-data-path[Define the oCIS Data Path] for basic environment variables.
+
+The example commands shown below have no environment variables or command line options for ease of reading, add them according your needs.
+
+To start the oCIS runtime type:
 
 [source,bash]
 ----
